--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             } else if (window.navigator.language == "th-TH") {
                 document.title = "เกมเล็กๆ：แตงโมสังเคราะห์";
             } else {
-                document.title = "Little game：Synthetic watermelon";
+                document.title = "Jinjoo Watermelon Game";
             }
 
 
